--- a/CSS/style.css
+++ b/CSS/style.css
@@ -117,7 +117,7 @@ body {
     display: flex;
     box-shadow: rgba(0, 0, 0, 0.5) 1px 1px 10px;
     width: 450px;
-
+    margin: auto;
 }
 
 .card-q4 .details {
@@ -145,11 +145,12 @@ body {
     transition: 0.4s;
 }
 
-.card-q4 .details button:hover{
+.card-q4 .details button:hover {
     background-color: rgba(52, 84, 209, 0.92);
     cursor: pointer;
 }
-.card-q4 .details button:active{
+
+.card-q4 .details button:active {
     background-color: rgba(52, 84, 209, 1);
 }
 
@@ -157,4 +158,62 @@ body {
     margin: 1rem 0;
     display: flex;
     margin-right: 0.5rem;
+}
+
+
+/* Question-5 */
+.card-q5 {
+    box-shadow: rgba(0, 0, 0, 0.5) 1px 1px 8px;
+    width: 250px;
+    margin: auto;
+    text-transform: uppercase;
+    border-radius: 0.35rem;
+    overflow: hidden;
+}
+
+.card-q5 * {
+    margin: 0;
+}
+
+.card-q5 h4 {
+    margin: 0.5rem 0 0.25rem 0.5rem;
+    font-weight: 200;
+    font-size: 0.75rem;
+}
+
+.card-q5 h1 {
+    margin: 0 0 0.5rem 0.5rem;
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+
+.card-q5 p {
+    margin: 0 0 0.5rem 0.5rem;
+}
+
+.card-q5 p .original-price {
+    color: rgba(0, 0, 0, 0.5);
+    font-size: small;
+    margin-left: 0.25rem;
+    text-decoration: line-through;
+}
+
+.card-q5 button {
+    margin: 0.25rem 0.5rem 0.5rem;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    border: 0;
+    background-color: rgba(52, 84, 209, 1);
+    color: #fff;
+    border-radius: 0.35rem;
+    transition: 0.4s;
+}
+
+.card-q5 button:hover {
+    background-color: rgba(52, 84, 209, 0.92);
+    cursor: pointer;
+}
+
+.card-q5 button:active {
+    background-color: rgba(52, 84, 209, 1);
 }
