--- a/CSS/style.css
+++ b/CSS/style.css
@@ -217,3 +217,45 @@ body {
 .card-q5 button:active {
     background-color: rgba(52, 84, 209, 1);
 }
+
+
+/* Question 6 */
+.card-q6{
+    box-shadow: rgba(0, 0, 0, 0.5) 1px 1px 8px;
+    width: 350px;
+    margin: auto;
+    border-radius: 0.25rem;
+    overflow: hidden;
+}
+.card-q6 .img-container-cover{
+    width: 350px;
+}
+.card-q6 .img-container-cover img{
+    width: 100%;
+}
+.card-q6 .img-container-profile{
+    display: inline-block;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 1rem;
+}
+.card-q6 .img-container-profile img{
+    width: 100%;
+    height: 100%;
+}
+.card-q6 .details{
+    display: inline-block;
+}
+.card-q6 .details h1{
+    margin: 0.5rem 0.25rem 0;
+    font-size: 1.6rem;
+    font-weight: 600;
+}
+.card-q6 .details h3{
+    margin: 0.25rem 0.25rem 0.5rem;
+    font-size: 1.1rem;
+    font-weight: 400;
+    opacity: 50%;
+}
