--- a/CSS/style.css
+++ b/CSS/style.css
@@ -220,20 +220,23 @@ body {
 
 
 /* Question 6 */
-.card-q6{
+.card-q6 {
     box-shadow: rgba(0, 0, 0, 0.5) 1px 1px 8px;
     width: 350px;
     margin: auto;
     border-radius: 0.25rem;
     overflow: hidden;
 }
-.card-q6 .img-container-cover{
+
+.card-q6 .img-container-cover {
     width: 350px;
 }
-.card-q6 .img-container-cover img{
+
+.card-q6 .img-container-cover img {
     width: 100%;
 }
-.card-q6 .img-container-profile{
+
+.card-q6 .img-container-profile {
     display: inline-block;
     width: 3rem;
     height: 3rem;
@@ -241,21 +244,85 @@ body {
     overflow: hidden;
     margin: 0 1rem;
 }
-.card-q6 .img-container-profile img{
+
+.card-q6 .img-container-profile img {
     width: 100%;
     height: 100%;
 }
-.card-q6 .details{
+
+.card-q6 .details {
     display: inline-block;
 }
-.card-q6 .details h1{
+
+.card-q6 .details h1 {
     margin: 0.5rem 0.25rem 0;
     font-size: 1.6rem;
     font-weight: 600;
 }
-.card-q6 .details h3{
+
+.card-q6 .details h3 {
     margin: 0.25rem 0.25rem 0.5rem;
     font-size: 1.1rem;
     font-weight: 400;
     opacity: 50%;
+}
+
+
+/* Question 7 */
+.card-q7{
+    width: 350px;
+    overflow: hidden;
+    margin: auto;
+    box-shadow: rgba(0, 0, 0, 0.5) 1px 1px 8px;
+    border-radius: 0.25rem;
+}
+.card-q7 .img-container{
+    width: 350px;
+}
+.card-q7 .img-container img{
+    width: 100%;
+}
+.card-q7 h1{
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+.card-q7 .title-price{
+    display: flex;
+    justify-content: space-between;
+}
+.card-q7 .title-price h1{
+    font-size: 1.5rem;
+}
+.card-q7 .title-price h1:first-of-type{
+    margin: 0 0 0.5rem 0.75rem;
+    font-weight: 600;
+}
+.card-q7 .title-price h1:nth-of-type(2){
+    margin: 0 0.75rem 0.5rem 0;
+    font-size: 1.2rem;
+    font-weight: 400;
+    opacity: 80%;
+}
+.card-q7 p{
+    margin: 0 0.75rem;
+}
+.card-q7 button {
+    margin: 1rem auto;
+    padding: 0.5rem 7rem;
+    font-size: 1rem;
+    border: 0;
+    background-color: rgba(52, 84, 209, 1);
+    color: #fff;
+    border-radius: 0.35rem;
+    transition: 0.4s;
+    display: block;
+}
+
+.card-q7 button:hover {
+    background-color: rgba(52, 84, 209, 0.92);
+    cursor: pointer;
+}
+
+.card-q7 button:active {
+    background-color: rgba(52, 84, 209, 1);
 }
